--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "sigrok-sys"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Tim Ryan <id@timryan.org>"]
 description = "Bindings for libsigrok"
 license = "GPL-3.0"
+repository = "https://github.com/tcr/sigrok-sys.git"
+homepage = "https://github.com/tcr/sigrok-sys.git"
 
 [dependencies]
 glib-sys = "0.3.0"
